fixed the hung in postman with signup problem

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ PORT=5000
 
 # zkUm3FPe6xRJT47h
 
-MONGO_DB_URI= ('mongodb+srv://asunny583:zkUm3FPe6xRJT47h@cluster0.eo4tj.mongodb.net/sun-db?retryWrites=true&w=majority&appName=Cluster0')
+MONGO_DB_URI= ('mongodb+srv://admin:admin@cluster0.8cre9er.mongodb.net/holasingh')
 
 JWT_SECRET=NJYOCyMrTCHctSr+mk+o7chG2GFKZos3mkmdRi0ht30=
 
