--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ PORT=5000
 
 # zkUm3FPe6xRJT47h
 
-MONGO_DB_URI= ('mongodb+srv://admin:admin@cluster0.8cre9er.mongodb.net/holasingh')
+MONGO_DB_URI= ('mongodb+srv://asunny583:Hekoa1844jVnvjOQ@cluster0.z7d8b.mongodb.net/chat-app-yt?retryWrites=true&w=majority&appName=Cluster0')
 
 JWT_SECRET=NJYOCyMrTCHctSr+mk+o7chG2GFKZos3mkmdRi0ht30=
 
